deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bootcamp
spec:
  selector:
    matchLabels:
      app: bootcamp
  replicas: 1
  template:
    metadata:
      labels:
        app: bootcamp
    spec:
      containers:
      - name: bootcamp
        image: docker.io/jocatalin/kubernetes-bootcamp:v1
        ports:
        - containerPort: 8080
