servicioBootcamp.yml
kind: Service
apiVersion: v1
metadata:
  name: bootcamp-service
spec:
  selector:
    app: bootcamp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
