ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bootcamp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: bootcamp-service
          servicePort: 8080
